public/css/minecraft.css
/* 
Fonts: Minecraft, Monocraft, Minecrafter, Minecraft Alt, Minecraft Evenings
CSS Variables:
    --block-size: 48px; all sizing is relative to this property to keep everything tiled together
    --zoom: 1; Set indiviualy for each class use this property to control how 'zoomed' in or out you want your UI textures to be
    --( 1/16 | 1/8 | 1/4 | 1/2 )-block
    --{1-32}-block 
Classes:
    text-shadow-(xs|sm|md|lg|xl)
    link
    bg-dark-(75|50|25)
    map
    book
    sign
    button
    scrollbar
    transparent-panel, paenl, panel-dark
    transparent-achievement panel, achievement panel
    transparent-slot, slot
    transparent-raised-slot, raised-slot, raised-slot-hover, raised-slot-active
    enchanting-slot, enchanting-slot-hover, enchanting-slot-active
    anvil-textbox, anvil-textbox-active
    table
    markdown
*/

:root {
    --block-size: 48px;
    --zoom: 1;
    
    --1\/16--block: calc(var(--block-size) / 16);
    --1\/8-block: calc(var(--block-size) / 8);
    --1\/4-block: calc(var(--block-size) / 4);
    --1\/2-block: calc(var(--block-size) / 2);
    --1-block: calc(var(--block-size) * 1);
    --2-block: calc(var(--block-size) * 2);
    --3-block: calc(var(--block-size) * 3);
    --4-block: calc(var(--block-size) * 4);
    --5-block: calc(var(--block-size) * 5);
    --6-block: calc(var(--block-size) * 6);
    --7-block: calc(var(--block-size) * 7);
    --8-block: calc(var(--block-size) * 8);
    --9-block: calc(var(--block-size) * 9);
    --10-block: calc(var(--block-size) * 10);
    --11-block: calc(var(--block-size) * 11);
    --12-block: calc(var(--block-size) * 12);
    --13-block: calc(var(--block-size) * 13);
    --14-block: calc(var(--block-size) * 14);
    --15-block: calc(var(--block-size) * 15);
    --16-block: calc(var(--block-size) * 16);
    --17-block: calc(var(--block-size) * 17);
    --18-block: calc(var(--block-size) * 18);
    --19-block: calc(var(--block-size) * 19);
    --20-block: calc(var(--block-size) * 20);
    --21-block: calc(var(--block-size) * 21);
    --22-block: calc(var(--block-size) * 22);
    --23-block: calc(var(--block-size) * 23);
    --24-block: calc(var(--block-size) * 24);
    --25-block: calc(var(--block-size) * 25);
    --26-block: calc(var(--block-size) * 26);
    --27-block: calc(var(--block-size) * 27);
    --28-block: calc(var(--block-size) * 28);
    --29-block: calc(var(--block-size) * 29);
    --30-block: calc(var(--block-size) * 30);
    --31-block: calc(var(--block-size) * 31);
    --32-block: calc(var(--block-size) * 32);

    --fluid-0: clamp(0.72rem, calc(0.67rem + 0.24vw), 0.87rem);
    --fluid-1: clamp(0.91rem, calc(0.87rem + 0.22vw), 1.04rem);
    --fluid-2: clamp(1.09rem, calc(1.04rem + 0.26vw), 1.25rem);
    --fluid-3: clamp(1.31rem, calc(1.25rem + 0.31vw), 1.50rem);
    --fluid-4: clamp(1.58rem, calc(1.50rem + 0.38vw), 1.80rem);
    --fluid-5: clamp(1.89rem, calc(1.80rem + 0.45vw), 2.16rem);
    --fluid-6: clamp(2.27rem, calc(2.16rem + 0.54vw), 2.59rem);
    --fluid-7: clamp(2.72rem, calc(2.59rem + 0.65vw), 3.11rem);
    --fluid-8: clamp(3.27rem, calc(3.11rem + 0.78vw), 3.73rem);
    --fluid-9: clamp(3.73rem, calc(3.48rem + 1.24vw), 4.48rem);
}


/* Typogrpahy */
.text-shadow-none {
    text-shadow: none;
} .text-shadow-xs {
    text-shadow: 0.75px 0.75px #000;
}.text-shadow-sm {
    text-shadow: 1px 1px #000;
} .text-shadow, .text-shadow-md,
  .table td,
  .button,
  .markdown > p,
  .markdown h1,
  .markdown h2,
  .markdown h3,
  .markdown h4,
  .markdown h5,
  .markdown h6,
  .markdown ul,
  .markdown :not(pre) code,
  .markdown td {
    text-shadow: 1.5px 1.5px #000;
} .text-shadow-lg {
    text-shadow: 1.75px 1.75px #000;
} .text-shadow-xl {
    text-shadow: 2px 2px #000;
}

  .link,
  .markdown a:not(.button) {
    text-shadow: none;
    color: #aaaaff;
} .link,
  .markdown a:not(.button):hover {
    text-decoration: underline;
}


/* Backgrounds */
[class*="bg-"] {
    image-rendering: crisp-edges;
    image-rendering: pixelated;
    image-rendering: -moz-crisp-edges;
    image-rendering: -webkit-optimize-contrast;
    background-attachment: fixed;
    background-size: var(--block-size);
    -o-background-size: var(--block-size);
    -moz-background-size: var(--block-size);
    -webkit-background-size: var(--block-size);
}

  .bg-dark-25 {
    background-image: linear-gradient(rgba(0,0,0,0.25),rgba(0,0,0,0.25));
} .bg-dark-50 {
    background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5));
} .bg-dark,
  .bg-dark-75 {
    background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75));
}

/* UI */
.sign {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    background-size: cover;
    background-image: url('../imgs/ui/sign.png');
    white-space: pre-line;
    color: #000;
}


.map {
    --zoom: 4;
    box-sizing: content-box;
    border-width: calc(var(--block-size) / var(--zoom));
    border-image: url('../imgs/ui/map.png');
    border-image-width: calc(var(--block-size) / var(--zoom));
    border-image-slice: 12.75% 15.75% fill;
    border-image-repeat: repeat;
}

.book {
    --zoom: 4;
    --size: calc((var(--block-size) / var(--zoom) * 3));
    border-width: var(--size);
    border-style: solid;
    border-left-width: calc(var(--size) / 1.5);
    border-image: url('../imgs/ui/book.png');
    border-image-width: var(--size) var(--size) var(--size) calc(var(--size) / 1.5);
    border-image-slice: 8.5% 15% 12.75% 10% fill;
    border-image-repeat: stretch;
    color: #000;
    text-shadow: none;
}
/* ... */

